warning squash