@@ -12,7 +12,7 @@ public class CustomLogicModel implements Editable {
 
     static int FLAG_SCHMITT = 1;
     static HashMap<String, CustomLogicModel> modelMap;
-    
+
     int flags;
     String name;
     String[] inputs;
@@ -22,10 +22,10 @@ public class CustomLogicModel implements Editable {
     Vector<String> rulesLeft, rulesRight;
     boolean dumped;
     boolean triState;
-    
+
     static CustomLogicModel getModelWithName(String name) {
 	if (modelMap == null)
-	    modelMap = new HashMap<String,CustomLogicModel>();
+	    modelMap = new HashMap<String, CustomLogicModel>();
 	CustomLogicModel lm = modelMap.get(name);
 	if (lm != null)
 	    return lm;
@@ -35,10 +35,10 @@ public class CustomLogicModel implements Editable {
 	modelMap.put(name, lm);
 	return lm;
     }
-    
+
     static CustomLogicModel getModelWithNameOrCopy(String name, CustomLogicModel oldmodel) {
 	if (modelMap == null)
-	    modelMap = new HashMap<String,CustomLogicModel>();
+	    modelMap = new HashMap<String, CustomLogicModel>();
 	CustomLogicModel lm = modelMap.get(name);
 	if (lm != null)
 	    return lm;
@@ -48,17 +48,17 @@ public class CustomLogicModel implements Editable {
 	modelMap.put(name, lm);
 	return lm;
     }
-    
+
     static void clearDumpedFlags() {
 	if (modelMap == null)
 	    return;
 	Iterator it = modelMap.entrySet().iterator();
 	while (it.hasNext()) {
-	    Map.Entry<String,CustomLogicModel> pair = (Map.Entry)it.next();
+	    Map.Entry<String, CustomLogicModel> pair = (Map.Entry) it.next();
 	    pair.getValue().dumped = false;
 	}
     }
-    
+
     CustomLogicModel() {
 	inputs = listToArray("A,B");
 	outputs = listToArray("C,D");
@@ -66,7 +66,7 @@ public class CustomLogicModel implements Editable {
 	rulesRight = new Vector<String>();
 	rules = "";
     }
-    
+
     CustomLogicModel(CustomLogicModel copy) {
 	flags = copy.flags;
 	inputs = copy.inputs;
@@ -76,22 +76,22 @@ public class CustomLogicModel implements Editable {
 	rulesLeft = copy.rulesLeft;
 	rulesRight = copy.rulesRight;
     }
-    
+
     static void undumpModel(StringTokenizer st) {
 	String name = unescape(st.nextToken());
 	CustomLogicModel model = getModelWithName(name);
 	model.undump(st);
     }
-    
+
     void undump(StringTokenizer st) {
-	flags = new Integer(st.nextToken()).intValue();
+	flags = Integer.valueOf(st.nextToken()).intValue();
 	inputs = listToArray(unescape(st.nextToken()));
 	outputs = listToArray(unescape(st.nextToken()));
 	infoText = unescape(st.nextToken());
 	rules = unescape(st.nextToken());
 	parseRules();
     }
-    
+
     String arrayToList(String arr[]) {
 	if (arr == null)
 	    return "";
@@ -103,42 +103,39 @@ public class CustomLogicModel implements Editable {
 	    x += "," + arr[i];
 	return x;
     }
-    
-    String [] listToArray(String arr) {
+
+    String[] listToArray(String arr) {
 	return arr.split(",");
     }
-    
+
     public EditInfo getEditInfo(int n) {
-        if (n == 0) {
-            EditInfo ei = new EditInfo("Inputs", 0, -1, -1);
-            ei.text = arrayToList(inputs);
-            return ei;
-        }
-        if (n == 1) {
-            EditInfo ei = new EditInfo("Outputs", 0, -1, -1);
-            ei.text = arrayToList(outputs);
-            return ei;
-        }
-        if (n == 2) {
-            EditInfo ei = new EditInfo("Info Text", 0, -1, -1);
-            ei.text = infoText;
-            return ei;
-        }
-        if (n == 3) {
-            EditInfo ei = new EditInfo(EditInfo.makeLink("customlogic.html", "Definition"), 0, -1, -1);
-            ei.textArea = new TextArea();
-            ei.textArea.setVisibleLines(5);
-            ei.textArea.setText(rules);
-            return ei;
-        }
-        /*
-         * not implemented
-        if (n == 4) {
-            EditInfo ei = new EditInfo("", 0, -1, -1);
-            ei.checkbox = new Checkbox("Schmitt", (flags & FLAG_SCHMITT) != 0);
-            return ei;
-        }
-        */
+	if (n == 0) {
+	    EditInfo ei = new EditInfo("Inputs", 0, -1, -1);
+	    ei.text = arrayToList(inputs);
+	    return ei;
+	}
+	if (n == 1) {
+	    EditInfo ei = new EditInfo("Outputs", 0, -1, -1);
+	    ei.text = arrayToList(outputs);
+	    return ei;
+	}
+	if (n == 2) {
+	    EditInfo ei = new EditInfo("Info Text", 0, -1, -1);
+	    ei.text = infoText;
+	    return ei;
+	}
+	if (n == 3) {
+	    EditInfo ei = new EditInfo(EditInfo.makeLink("customlogic.html", "Definition"), 0, -1, -1);
+	    ei.textArea = new TextArea();
+	    ei.textArea.setVisibleLines(5);
+	    ei.textArea.setText(rules);
+	    return ei;
+	}
+	/*
+	 * not implemented if (n == 4) { EditInfo ei = new EditInfo("", 0, -1, -1);
+	 * ei.checkbox = new Checkbox("Schmitt", (flags & FLAG_SCHMITT) != 0); return
+	 * ei; }
+	 */
 	return null;
     }
 
@@ -174,7 +171,7 @@ public class CustomLogicModel implements Editable {
 		continue;
 	    String s0[] = s.replaceAll(" ", "").split("=");
 	    if (s0.length != 2) {
-		Window.alert("Error on line " + (i+1) + " of model description");
+		Window.alert("Error on line " + (i + 1) + " of model description");
 		return;
 	    }
 	    if (s0[0].length() < inputs.length) {
@@ -182,7 +179,7 @@ public class CustomLogicModel implements Editable {
 		return;
 	    }
 	    if (s0[0].length() > inputs.length + outputs.length) {
-		Window.alert("Model must have <= " + (inputs.length+outputs.length) + " digits on left side");
+		Window.alert("Model must have <= " + (inputs.length + outputs.length) + " digits on left side");
 		return;
 	    }
 	    if (s0[1].length() != outputs.length) {
@@ -200,15 +197,15 @@ public class CustomLogicModel implements Editable {
 		    continue;
 		}
 		if (x < 'a' || x > 'z') {
-		    Window.alert("Error on line " + (i+1) + " of model description");
+		    Window.alert("Error on line " + (i + 1) + " of model description");
 		    return;
 		}
 		// if a letter appears twice, capitalize it the 2nd time so we can compare
-		if (used[x-'a']) {
-		    newRl += (char)(x + 'A' - 'a');
+		if (used[x - 'a']) {
+		    newRl += (char) (x + 'A' - 'a');
 		    continue;
 		}
-		used[x-'a'] = true;
+		used[x - 'a'] = true;
 		newRl += x;
 	    }
 	    String rr = s0[1];
@@ -218,45 +215,45 @@ public class CustomLogicModel implements Editable {
 	    rulesRight.add(s0[1]);
 	}
     }
-    
+
     String dump() {
 	dumped = true;
 	if (rules.length() > 0 && !rules.endsWith("\n"))
 	    rules += "\n";
-	return "! " + escape(name) + " " + flags + " " + escape(arrayToList(inputs)) + " " +
-		escape(arrayToList(outputs)) + " " + escape(infoText) + " " + escape(rules); 
+	return "! " + escape(name) + " " + flags + " " + escape(arrayToList(inputs)) + " "
+		+ escape(arrayToList(outputs)) + " " + escape(infoText) + " " + escape(rules);
     }
-    
+
     static String escape(String s) {
 	if (s.length() == 0)
 	    return "\\0";
-	return s.replace("\\", "\\\\").replace("\n", "\\n").replace(" ", "\\s").replace("+", "\\p").
-		replace("=", "\\q").replace("#", "\\h").replace("&", "\\a").replace("\r", "\\r");
+	return s.replace("\\", "\\\\").replace("\n", "\\n").replace(" ", "\\s").replace("+", "\\p").replace("=", "\\q")
+		.replace("#", "\\h").replace("&", "\\a").replace("\r", "\\r");
     }
-    
+
     static String unescape(String s) {
 	if (s.equals("\\0"))
 	    return "";
 	int i;
 	for (i = 0; i < s.length(); i++) {
 	    if (s.charAt(i) == '\\') {
-		char c = s.charAt(i+1);
+		char c = s.charAt(i + 1);
 		if (c == 'n')
-		    s = s.substring(0, i) + "\n" + s.substring(i+2);
+		    s = s.substring(0, i) + "\n" + s.substring(i + 2);
 		else if (c == 'r')
-		    s = s.substring(0, i) + "\r" + s.substring(i+2);
+		    s = s.substring(0, i) + "\r" + s.substring(i + 2);
 		else if (c == 's')
-		    s = s.substring(0, i) + " " + s.substring(i+2);
+		    s = s.substring(0, i) + " " + s.substring(i + 2);
 		else if (c == 'p')
-		    s = s.substring(0, i) + "+" + s.substring(i+2);
+		    s = s.substring(0, i) + "+" + s.substring(i + 2);
 		else if (c == 'q')
-		    s = s.substring(0, i) + "=" + s.substring(i+2);
+		    s = s.substring(0, i) + "=" + s.substring(i + 2);
 		else if (c == 'h')
-		    s = s.substring(0, i) + "#" + s.substring(i+2);
+		    s = s.substring(0, i) + "#" + s.substring(i + 2);
 		else if (c == 'a')
-		    s = s.substring(0, i) + "&" + s.substring(i+2);
+		    s = s.substring(0, i) + "&" + s.substring(i + 2);
 		else
-		    s = s.substring(0, i) + s.substring(i+1);
+		    s = s.substring(0, i) + s.substring(i + 1);
 	    }
 	}
 	return s;
