@@ -24,6 +24,7 @@ import com.lushprojects.circuitjs1.client.util.Locale;
 class SparkGapElm extends CircuitElm {
     double resistance, onresistance, offresistance, breakdown, holdcurrent;
     boolean state;
+
     public SparkGapElm(int xx, int yy) {
 	super(xx, yy);
 	offresistance = 1e9;
@@ -32,32 +33,40 @@ class SparkGapElm extends CircuitElm {
 	holdcurrent = 0.001;
 	state = false;
     }
-    public SparkGapElm(int xa, int ya, int xb, int yb, int f,
-		       StringTokenizer st) {
+
+    public SparkGapElm(int xa, int ya, int xb, int yb, int f, StringTokenizer st) {
 	super(xa, ya, xb, yb, f);
-	onresistance = new Double(st.nextToken()).doubleValue();
-	offresistance = new Double(st.nextToken()).doubleValue();
-	breakdown = new Double(st.nextToken()).doubleValue();
-	holdcurrent = new Double(st.nextToken()).doubleValue();
+	onresistance = Double.valueOf(st.nextToken()).doubleValue();
+	offresistance = Double.valueOf(st.nextToken()).doubleValue();
+	breakdown = Double.valueOf(st.nextToken()).doubleValue();
+	holdcurrent = Double.valueOf(st.nextToken()).doubleValue();
     }
-    boolean nonLinear() {return true;}
-    int getDumpType() { return 187; }
+
+    boolean nonLinear() {
+	return true;
+    }
+
+    int getDumpType() {
+	return 187;
+    }
+
     String dump() {
-	return super.dump() + " " + onresistance + " " + offresistance + " "
-	    + breakdown + " " + holdcurrent;
+	return super.dump() + " " + onresistance + " " + offresistance + " " + breakdown + " " + holdcurrent;
     }
+
     Polygon arrow1, arrow2;
+
     void setPoints() {
 	super.setPoints();
 	int dist = 16;
 	int alen = 8;
-	calcLeads(dist+alen);
-	Point p1 = interpPoint(point1, point2, (dn-alen)/(2*dn));
+	calcLeads(dist + alen);
+	Point p1 = interpPoint(point1, point2, (dn - alen) / (2 * dn));
 	arrow1 = calcArrow(point1, p1, alen, alen);
-	p1 = interpPoint(point1, point2, (dn+alen)/(2*dn));
+	p1 = interpPoint(point1, point2, (dn + alen) / (2 * dn));
 	arrow2 = calcArrow(point2, p1, alen, alen);
     }
-    
+
     void draw(Graphics g) {
 	int i;
 	double v1 = volts[0];
@@ -74,10 +83,10 @@ class SparkGapElm extends CircuitElm {
 	    doDots(g);
 	drawPosts(g);
     }
-    
+
     void calculateCurrent() {
 	double vd = volts[0] - volts[1];
-	current = vd/resistance;
+	current = vd / resistance;
     }
 
     void reset() {
@@ -92,15 +101,17 @@ class SparkGapElm extends CircuitElm {
 	if (Math.abs(vd) > breakdown)
 	    state = true;
     }
-    
+
     void doStep() {
 	resistance = (state) ? onresistance : offresistance;
 	sim.stampResistor(nodes[0], nodes[1], resistance);
     }
+
     void stamp() {
 	sim.stampNonLinear(nodes[0]);
 	sim.stampNonLinear(nodes[1]);
     }
+
     void getInfo(String arr[]) {
 	arr[0] = "spark gap";
 	getBasicInfo(arr);
@@ -109,6 +120,7 @@ class SparkGapElm extends CircuitElm {
 	arr[5] = "Roff = " + getUnitText(offresistance, Locale.ohmString);
 	arr[6] = "Vbreakdown = " + getUnitText(breakdown, "V");
     }
+
     public EditInfo getEditInfo(int n) {
 	// ohmString doesn't work here on linux
 	if (n == 0)
@@ -121,6 +133,7 @@ class SparkGapElm extends CircuitElm {
 	    return new EditInfo("Holding current (A)", holdcurrent, 0, 0);
 	return null;
     }
+
     public void setEditValue(int n, EditInfo ei) {
 	if (ei.value > 0 && n == 0)
 	    onresistance = ei.value;
@@ -132,4 +145,3 @@ class SparkGapElm extends CircuitElm {
 	    holdcurrent = ei.value;
     }
 }
-
